--- a/app/src/main/res/layout/activity_new_song.xml
+++ b/app/src/main/res/layout/activity_new_song.xml
@@ -161,6 +161,16 @@
 
         </LinearLayout>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:id="@+id/button2"
+            android:layout_gravity="right"
+            android:layout_weight="0"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp" />
+
     </LinearLayout>
 
 </RelativeLayout>
