--- a/app/src/main/res/layout/activity_new_song.xml
+++ b/app/src/main/res/layout/activity_new_song.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mymusic.mymusicapp.NewSongActivity">
+    tools:context=".mymusic.NewSongActivity">
 
     <LinearLayout
         android:orientation="vertical"
