--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".mymusic.MainActivity">
+    tools:context="com.mymusic.mymusicapp.view.MainActivity">
 
 
     <LinearLayout
@@ -26,7 +26,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText7"
+                android:id="@+id/searchField"
                 android:layout_weight="2"
                 android:layout_marginRight="10dp" />
 
@@ -34,7 +34,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Search"
-                android:id="@+id/button"
+                android:id="@+id/searchButton"
                 android:layout_gravity="right"
                 android:layout_weight="1" />
         </LinearLayout>
