--- a/app/src/main/res/layout/activity_new_song.xml
+++ b/app/src/main/res/layout/activity_new_song.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".mymusic.NewSongActivity">
+    tools:context="com.mymusic.mymusicapp.view.NewSongActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -36,7 +36,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
+                android:id="@+id/titleField"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center"
                 android:layout_weight="3" />
@@ -61,7 +61,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText2"
+                android:id="@+id/artistField"
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:layout_marginLeft="10dp" />
@@ -84,7 +84,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText3"
+                android:id="@+id/yearField"
                 android:layout_gravity="center|left"
                 android:layout_weight="3"
                 android:layout_marginLeft="10dp" />
@@ -107,7 +107,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText4"
+                android:id="@+id/albumField"
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:layout_marginLeft="10dp" />
@@ -130,7 +130,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText5"
+                android:id="@+id/youtubeField"
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:layout_marginLeft="10dp" />
@@ -154,7 +154,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText6"
+                android:id="@+id/imageField"
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:layout_marginLeft="10dp" />
@@ -165,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add"
-            android:id="@+id/button2"
+            android:id="@+id/addButton"
             android:layout_gravity="right"
             android:layout_weight="0"
             android:layout_marginTop="10dp"
