MochNetwork modules and MockNetwork requests implemented.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".mymusic.MainActivity">
+    tools:context=".view.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_add_new"
+        android:title="@string/action_add"
+        app:showAsAction="ifRoom"/>
+    <!--android:icon="@drawable/ic_favorite_black_48dp"-->
+
 </menu>
