--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_add_new"
         android:title="@string/action_add"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <!--android:icon="@drawable/ic_favorite_black_48dp"-->
 
 </menu>
