Add new song request implemented.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,12 @@
                 android:id="@+id/searchButton"
                 android:layout_gravity="right"
                 android:layout_weight="1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:id="@+id/addButton" />
         </LinearLayout>
 
         <ListView
