--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -44,7 +44,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/titleField"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center"
             android:layout_weight="3" />
@@ -69,7 +69,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/artistField"
             android:layout_gravity="center"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
@@ -94,7 +94,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText3"
+            android:id="@+id/yearField"
             android:layout_gravity="center|left"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
@@ -119,7 +119,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText4"
+            android:id="@+id/albumField"
             android:layout_gravity="center"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
@@ -144,7 +144,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText5"
+            android:id="@+id/youtubeField"
             android:layout_gravity="center"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
@@ -170,7 +170,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/editText6"
+            android:id="@+id/imageField"
             android:layout_gravity="center"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
@@ -190,7 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Modify"
-                android:id="@+id/button4"
+                android:id="@+id/modifyButton"
                 android:layout_gravity="right"
                 android:layout_weight="0"
                 android:layout_marginRight="10dp" />
@@ -199,7 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delete"
-                android:id="@+id/button3"
+                android:id="@+id/deleteButton"
                 android:layout_weight="0" />
         </LinearLayout>
 
