--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -96,6 +96,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/yearField"
             android:layout_gravity="center|left"
+            android:inputType="number"
             android:layout_weight="3"
             android:layout_marginLeft="10dp" />
 
