--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/action_add_new"
         android:title="@string/action_add"
+        android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="always"/>
     <!--android:icon="@drawable/ic_favorite_black_48dp"-->
 
