--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,7 +23,8 @@
             android:layout_height="0dp"
             android:id="@+id/imageView"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="5" />
+            android:layout_weight="5"
+            android:src="@mipmap/no_image" />
 
         <LinearLayout
         android:orientation="horizontal"
