--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -203,6 +203,15 @@
                 android:text="Delete"
                 android:id="@+id/deleteButton"
                 android:layout_weight="0" />
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="Force Crash!"
+                android:onClick="forceCrash"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
         </LinearLayout>
 
     </LinearLayout>
